--- a/src/css/main.css
+++ b/src/css/main.css
@@ -88,7 +88,6 @@
 .vkuiPanelHeader__content-in {
     color: #2B8FFE;
 }
-
-.vkuiPanelHeader__content {
-    cursor: default;
+.vkuiTabbarItem--android {
+    padding-bottom: None;
 }
