--- a/src/css/main.css
+++ b/src/css/main.css
@@ -88,6 +88,9 @@
 .vkuiPanelHeader__content-in {
     color: #2B8FFE;
 }
-.vkuiTabbarItem--android {
-    padding-bottom: None;
+
+.vkuiTabbarItem--android .vkuiTabbarItem__tappable {
+    width: calc(100% + 16px);
+    padding-bottom: 0px;
+    border-radius: 50%;
 }
