--- a/src/css/main.css
+++ b/src/css/main.css
@@ -81,10 +81,6 @@
     color: #2B8FFE;
 }
 
-.vkuiTabbarItem {
-
-}
-
 .vkuiPanelHeader__content-in {
     color: #2B8FFE;
 }
@@ -93,4 +89,9 @@
     width: calc(100% + 16px);
     padding-bottom: 0px;
     border-radius: 50%;
+}
+
+.fixPaddingPlaceholder {
+    margin-top: -25px;
+    margin-bottom: -30px;
 }
