--- a/src/css/main.css
+++ b/src/css/main.css
@@ -111,3 +111,8 @@
     justify-content: center;
     font-size: 50px;
 }
+
+.activeCellMenu {
+    background-color: var(--button_secondary_background);
+    border-radius: 8px
+}
