fixes & review onboarding

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -125,3 +125,11 @@
 .btn_settings {
     margin-bottom: 5px;
 }
+
+.fixOnbordingFixedLayout {
+    position: inherit;
+}
+
+.vkuiGallery__layer {
+    cursor: default;
+}
